--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <header>
-    <h1>სალამი, მე ვარ ნიკოლოზი</h1>
-    <p>ვებდეველოპერი | კრეატიული მოსაფიქრებელი</p>
+    <h1>სალამი, მე ვარ ნიკა</h1>
+    <p>ვებდეველოპერი</p>
     <a href="#contact" class="btn">დამიკავშირდი</a>
   </header>
 
   <section id="about">
     <h2>ჩემს შესახებ</h2>
-    <p>ვმუშაობ როგორც ვებდიზაინერი და დეველოპერი. მიყვარს ინოვაციური იდეები და სუფთა კოდი.</p>
+    <p>ვმუშაობ როგორც ვებდიზაინერი ისვე როგორც დეველოპერი. მიყვარს ინოვაციური იდეები და სუფთა კოდი.</p>
   </section>
 
   <section id="skills">
@@ -31,11 +31,11 @@
 
   <section id="contact">
     <h2>კონტაქტი</h2>
-    <p>მომწერე Email: <a href="mailto:example@gmail.com">example@gmail.com</a></p>
+    <p>მომწერე Email: <a href="mailto:nikajalapro1918@gmail.com">example@gmail.com</a></p>
   </section>
 
   <footer>
-    <p>© 2025 ნიკოლოზი | ყველა უფლება დაცულია</p>
+    <p>© 2025 ნიკა | ყველა უფლება დაცულია</p>
   </footer>
 </body>
 </html>
