--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section id="contact">
     <h2>კონტაქტი</h2>
-    <p>მომწერე Email: <a href="mailto:nikajalapro1918@gmail.com">example@gmail.com</a></p>
+    <p>მომწერე Email: <a href="mailto:nikajalapro1918@gmail.com">nikajalapro1918@gmail.com</a></p>
   </section>
 
   <footer>
